Style fix cart modals
Fix items content and user forms from overflowing outside the modal

--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -77,3 +77,8 @@
   background-color: #8a2b06;
   color: white;
 }
+
+.user-details-form {
+  max-height: 30vh;
+  overflow: auto;
+}
